--- a/Final/W07. Hypothesis Testing.ipynb
+++ b/Final/W07. Hypothesis Testing.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "ppnA_ZieV_oZ",
         "outputId": "df119dfa-aa00-453a-c7f8-38fecf83da82",
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "YggAaEeiV_oa"
       },
@@ -80,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "9kAIs0NJV_oa",
         "outputId": "6db4a67a-2c01-4f15-e9ec-a8c2ecf6bcc9",
@@ -506,7 +506,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "gZDBRWnsV_oc",
         "outputId": "da09388f-b84e-4d4d-9bba-778f3405b64b",
@@ -554,7 +554,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "DEEoOWDnV_oc",
         "outputId": "405c803a-9699-437c-be8e-f27310276c2e",
@@ -595,7 +595,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "GJ-Y9_BgV_od",
         "outputId": "2bfa9e84-db30-4c57-8709-5341a0d57ecc",
@@ -638,7 +638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "gvWbgT-VV_od",
         "outputId": "bf0c98b2-e385-42f7-d452-57cd5e1d9902",
@@ -691,7 +691,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "iiny8-ouV_oe",
         "outputId": "209db909-6f3b-4c97-e97c-ecf42391effa",
@@ -765,7 +765,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "YjoZkxvgV_oe",
         "outputId": "f24185ae-8247-447f-f4e1-a18faf4d09f4",
@@ -833,7 +833,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "MSTVBVimV_of"
       },
@@ -886,7 +886,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "rlIjHYIUV_of",
         "outputId": "089ac03c-7743-41da-88f4-15eb0956a342",
@@ -925,7 +925,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "anSIMXJ_V_of",
         "outputId": "df6af580-8a5f-4303-9456-956ac3bfae95",
@@ -967,7 +967,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "Y6N0XajBV_og",
         "outputId": "e1278168-4bd1-4715-d744-0af88948eb94",
@@ -1044,7 +1044,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "PseEltnPV_og",
         "outputId": "8a5e6404-481b-4720-d027-b946819f1e52",
@@ -1069,7 +1069,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "6I-QUDlcV_og",
         "outputId": "cf08190f-322c-4bcd-c57f-a14fe72febab",
@@ -1134,7 +1134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "id": "hGKYZ6lwV_og",
         "outputId": "65eccc9b-b343-4816-ae92-42aeb3f093ed",
@@ -1175,7 +1175,7 @@
           "height": 716
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1191,7 +1191,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Therefore, as the test statistic lies in the critical region, there is sufficient evidence to reject H0, impyling the mean number of tweets\n",
+        "# containing slurs increased after Elon Musk's tweet."
+      ],
       "metadata": {
         "id": "8eFNbr5Md2DD"
       },
