--- a/Final/W07. Hypothesis Testing.ipynb
+++ b/Final/W07. Hypothesis Testing.ipynb
@@ -1193,7 +1193,7 @@
       "cell_type": "code",
       "source": [
         "# Therefore, as the test statistic lies in the critical region, there is sufficient evidence to reject H0, impyling the mean number of tweets\n",
-        "# containing slurs increased after Elon Musk's tweet."
+        "# containing slurs increased after Elon Musk's tweet, and that this is statistically significant."
       ],
       "metadata": {
         "id": "8eFNbr5Md2DD"
